Fixed scrollbar showing up on can var

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
 	max-width: 960px;
 	margin: 0 auto;
 	clear: both;
+	overflow: hidden;
 }
 
 /* Styles for the Headings */
